--- a/package.json
+++ b/package.json
@@ -67,14 +67,13 @@
     "grunt-node-inspector": "~0.1.3",
     "grunt-nodemon": "~0.2.0",
     "open": "~0.0.4",
-    "karma-chrome-launcher": "^0.1.4"
+    "karma-chrome-launcher": "^0.1.4",
+    "bower": "~1.3.5"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "build": "grunt --no-color build",
-    "prod-build": "grunt --no-color build"
+    "test": "grunt test"
   }
 }
